# endecrypt

./: .gitignore  CMakeLists.txt  README.md
include/app/: AccountWidget.h  EndecryptWidget.h  MainWindow.h
src/app/: AccountWidget.cpp  CMakeLists.txt  EndecryptWidget.cpp  MainWindow.cpp  main.cpp
